--- a/index.html
+++ b/index.html
@@ -35,6 +35,32 @@
 
 		</section>
 
+		<section class="mainPart">
+		<div class="tour">
+			<div id="logoPromo1">
+			<li><a href="contact.html">TAKE A TOUR OF ONE OF OUR MANY BREWERIES</a></li>
+			</div>
+		</div>
+	
+		<div class="videos">
+				<div class="videosTop">
+					<video class="careers" src="assets/careers.mp4" type="video/mp4"></video>
+					<video class="brands" src="assets/brands.mp4"type="video/mp4"></video>
+				</div>
+
+				<div class="videosBottom">
+					<video class="process" src="assets/process.mp4"type="video/mp4"></video>
+					<video class="clothes" src="assets/clothes.mp4"type="video/mp4"></video>
+				</div>
+		</div>
+	</section>
+		
+
+
+		
+
+
+
 
 
 
@@ -46,6 +72,8 @@
 
 </div>
 
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/video.js"></script>
 	</body>
 </html>
