--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 		<title>About Us</title>
 			<link href="css/reset.css" rel="stylesheet" type="text/css">
 				<link href="css/main.css" rel="stylesheet" type="text/css">
+				<link rel="icon" href="images/logo/logo_main.png">
 	</head>
 	<body>
 		
@@ -35,8 +36,41 @@
 		</section>
 
 
+		<section class="headerTitle">
+			<h1 class="moreBeer">MORE THAN A BEER</h1>
+			<p>Anheuser-Busch is here for the good times
+			the moments you remember after years, the moments you look back on and smile.</p>
+			<p>We embrace the centuries old tradition of brewing beer
+			while constantly striving to innovate and drive ourselves to create the perfect beer.</p>
+		</section>
 
-			
+		<section class="clearCare">
+			<h1 class="clearcareTitle">CLEAR CARE® PLUS</h1>
+			<p class="clearcareP">With our recent collaboration with Clear Care® Plus you can clearly
+			see why Anhueser-Busch is the beer you should choose.</p>
+		</section>
+
+
+		<div class="pictureBorder"></div>
+
+		<section class="breweryPictor">
+			<img src="images/bud4.png" alt="picture1" height="174" width="1920">
+		</section>
+
+
+
+			<footer class="mainFooter">
+	
+	<div class="footerNav1">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="history.html">Our History</a></li>
+						<li><a href="store.html">Store</a></li>
+					</ul>
+	</div>
+</footer>
 		</div>
 	
 
