--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 		<title>Contact Us</title>
 			<link href="css/reset.css" rel="stylesheet" type="text/css">
 				<link href="css/main.css" rel="stylesheet" type="text/css">
+				<link rel="icon" href="images/logo/logo_main.png">
 	</head>
 	<body>
 		
@@ -34,9 +35,49 @@
 
 		</section>
 
-
-
+		<section class="emailCapture">
+			<h1 class="emailTitle">SIGN UP FOR OUR NEWSLETTER</h1>
 			
+			<div class="emailButton">
+			<label for="email">E-mail:</label>
+            <input type="email" required id="email" size="30" placeholder="Enter your E-mail here">
+                    	</div>
+		</section>
+
+		<div class="button">
+		<button id="sendButton" type="send" onclick="()">SEND</button>
+		</div>
+
+		<section class="socialMedia">
+			<h1 class="socialTitle">FOLLOW US!</h1>
+			<div class="icons">
+				<a href="https://www.instagram.com/"><img class="instagram" src="images/general/logos/instagram.png" alt="ig" height="130"></a>
+				<a href="https://twitter.com/"><img class="twitter" src="images/general/logos/twitter.png" alt="fb" height="130"></a>
+				<a href="https://www.facebook.com/"><img class="facebook" src="images/general/logos/facebook.png" height="130"></a>
+
+				<div class="iconsText">
+					<p class="insta">INSTAGRAM TWITTER FACEBOOK</p>
+					
+				</div>
+
+			</div>
+
+		</section>
+
+
+
+			<footer class="mainFooter">
+	
+	<div class="footerNav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="history.html">Our History</a></li>
+						<li><a href="store.html">Store</a></li>
+					</ul>
+	</div>
+</footer>
 		</div>
 	
 
