--- a/history.html
+++ b/history.html
@@ -5,6 +5,7 @@
 		<title>Our History</title>
 			<link href="css/reset.css" rel="stylesheet" type="text/css">
 				<link href="css/main.css" rel="stylesheet" type="text/css">
+				<link rel="icon" href="images/logo/logo_main.png">
 	</head>
 	<body>
 		
@@ -33,8 +34,80 @@
 
 		</section>
 
+		
+		<section class="historyTitle">
+				<h1>OUR HISTORY</h1>
+		</section>
+
+		<div class="historyText">
+				<p class="text1">
+					Anhueser-Busch was formed in the 1850s, by Adolphus Busch, and Eberhard Anhueser in St.Louis Mi. What started out as a neighborhood brewery, quickly formed into a national brand.
+				</p>
+
+				<p class="text2">With the ever growing population of German Settlers into the United States, Anhueser-Busch became one of the first nationaly known beer companies</p>
+			</div>
+		<section class="slideshowMain">
+			<div id="slideshow" data-component="slideshow">
+		
+		<div role="list">
+			
+			<div class="slide">
+				<img class="budw1" src="images/bud.jpg" alt="image1">
+				<p>Our Budweiser Brewery</p>
+			</div>
+			<div class="slide">
+				<img class="budw2" src="images/bud2.jpg" alt="image2" height="406" width="620">
+				<p>Inside one of our Breweries</p>
+			</div>
+			<div class="slide">
+				<img class="budw3" src="images/bud3.jpg" alt="image3" height="406" width="620">
+				<p>Our main Anheuser-Busch Brewery</p>
+			</div>
+			<div class="slide">
+				<img class="budw4" src="images/busch.jpg" alt="image4" height="406" width="620">
+				<p>Adolphus Busch</p>
+			</div>
+
+			<div class="slide">
+				<img class="budw4" src="images/busch_founder_real.jpg" alt="image4" height="406" width="620">
+				<p>Eberhard Anheuser</p>
+			</div>
+			
+
+			</div>
 
 			
+	
+
+
+	</div>
+</section>
+
+
+			
+
+
+
+
+
+
+
+
+
+
+
+<footer class="mainFooter">
+	
+	<div class="footerNav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="history.html">Our History</a></li>
+						<li><a href="store.html">Store</a></li>
+					</ul>
+	</div>
+</footer>
 		</div>
 
 
