--- a/store.html
+++ b/store.html
@@ -5,6 +5,7 @@
 		<title>Store</title>
 			<link href="css/reset.css" rel="stylesheet" type="text/css">
 				<link href="css/main.css" rel="stylesheet" type="text/css">
+				<link rel="icon" href="images/logo/logo_main.png">
 	</head>
 	<body>
 		
@@ -38,6 +39,20 @@
 
 
 		
+	
+		<footer class="mainFooter">
+	
+	<div class="footerNav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="history.html">Our History</a></li>
+						<li><a href="store.html">Store</a></li>
+					</ul>
+	</div>
+</footer>
+
 	</div>
 	
 
