--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		
 		
-		<div class="container">
+		<div id="container">
 
 			<div class="topBorder"></div>
 			
@@ -26,6 +26,8 @@
 						<li><a href="history.html">Our History</a></li>
 						<li><a href="store.html">Store</a></li>
 					</ul>
+				
+
 				</nav>
 		 </header>
 		
