--- a/store.html
+++ b/store.html
@@ -36,6 +36,30 @@
 
 		</section>
 
+		
+		<section class="mainStore">
+		<section class="sixPack">
+			<div class="sixPackImg">
+				
+				<img class="img6" src="images/6pack2.png" alt="sixPackim" height="400" width="400">
+				<p class="6packText">6 Pack - $12.99</p>
+			</div>
+
+
+
+
+		</section>
+
+
+		<section class="hat">
+			<div class="hatImg">
+				<img src="images/environment/environment_application.jpg" alt="hatbusch" height="400" width="400">
+				<p>Snapback Hat - $39.99</p>
+
+			</div>
+
+		</section>
+</section>
 
 
 		
